Fixed misalignment of navbar links, icons and hamburger menu icon

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@
 
       }
 
+      
 
       div .w3-sidebar {
         right: 0;
@@ -38,7 +39,7 @@
         backdrop-filter:  blur(4px);
         border: none;
         width: 54.2%;
-        margin: 4px 4px;
+        margin: 4px 4px 4px 4px;
         
       }
   
